problems working with file